--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
 	"name": "busr",
+	 "subdomain": "busr",
 	"description": "Busr Transitor, your transit adaptor",
 	"version": "0.0.1",
+    "scripts": {
+      "predeploy": "echo This will be run before deploying the app",
+      "postdeploy": "echo This will be run after deploying the app",
+      "start": "app.js"
+    },
 	"dependencies": {
 		"express": "3.x",
 		"hbs":"*"
@@ -11,3 +17,4 @@
     "npm":  "1.2.x"
   }
 }
+
