changed start to web.js

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
       "predeploy": "echo This will be run before deploying the app",
       "postdeploy": "echo This will be run after deploying the app",
-      "start": "app.js"
+      "start": "web.js"
     },
 	"dependencies": {
 		"express": "3.x",
