--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
 	"name": "busr",
-	 "subdomain": "busr",
+	"subdomain": "busr",
 	"description": "Busr Transitor, your transit adaptor",
-	"version": "0.0.1",
-    "scripts": {
-      "predeploy": "echo This will be run before deploying the app",
-      "postdeploy": "echo This will be run after deploying the app",
-      "start": "web.js"
-    },
+	"version": "0.0.1-1",
+	"scripts": {
+		"predeploy": "echo This will be run before deploying the app",
+		"postdeploy": "echo This will be run after deploying the app",
+		"start": "web.js"
+	},
 	"dependencies": {
 		"express": "3.x",
-		"hbs":"*"
+		"hbs": "*"
 	},
-	  "engines": {
-    "node": "0.10.x",
-    "npm":  "1.2.x"
-  }
+	"engines": {
+		"node": "0.10.x",
+		"npm": "1.2.x"
+	}
 }
-
