--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"www.busr.info"
 	],
 	"description": "Busr Transitor, your transit adaptor",
-	"version": "0.0.1-12",
+	"version": "0.0.1-14",
 	"scripts": {
 		"predeploy": "echo This will be run before deploying the app",
 		"postdeploy": "echo This will be run after deploying the app",
@@ -14,7 +14,8 @@
 	},
 	"dependencies": {
 		"express": "3.x",
-		"hbs": "*"
+		"hbs": "*",
+		"everyauth": "0.4.x"
 	},
 	"engines": {
 		"node": "0.10.x",
